Don't wait on a CRTC which has been disabled via DPMS (bug #49761).

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=49761 .

Signed-off-by: Michel Dänzer <michel.daenzer@amd.com>